2000-08-10  Ali Abdin <aliabdin@aucegypt.edu>

        * libgnomevfs/gnome-vfs-gen-mimedb.c:
        (main):
        Replace gnomelib_init with gnome_vfs_init and replace
        Replace g_file_exists with access(,F_OK)

        Remove #include of gnome-libs file

        * modules/file-method.c:
        (do_find_directory):
        Replace g_file_exists with access(,F_OK)
        (do_set_file_info): Remove usage of g_concat_dir_and_file (to avoid
        gnome-libs dependency).

        Also #include <string.h>

        * libgnomevfs-corba.c:
        #include <popt.h>

2000-08-10  Maciej Stachowiak  <mjs@eazel.com>
 
 	* libgnomevfs/gnome-vfs-uri.c (parse_uri_substring,
 	gnome_vfs_uri_new): Tolerate fragment identifiers by just ignoring
 	them; differentiate them from the gnome-vfs method chaning syntax
 	by checking for a colon past the pound sign.
 
Wed Aug 09 23:26:17 2000  George Lebl <jirka@5z.com>

	* libgnomevfs/gnome-vfs-application-registry.[ch]
	  (application_info_load) (gnome_vfs_application_registry_init)
	  (gnome_vfs_application_registry_sync)
	  libgnomevfs/gnome-vfs-mime-handlers.c
	  (gnome_vfs_mime_edit_user_file_full)
	  libgnomevfs/gnome-vfs-mime-info.[ch] (mime_info_load)
	  (mime_list_load) (gnome_vfs_mime_init) (write_registered_mime_data)
	  libgnomevfs/gnome-vfs-mime-magic.h
	  libgnomevfs/gnome-vfs-mime-private.h
	  libgnomevfs/gnome-vfs-mime.[ch] (mime_load) (mime_init)
	  libgnomevfs/gnome-vfs.h, libgnomevfs/gnome-vfs-private.h:
	  Remove all the simple gnome dependencies.  All the gnome-utils
	  dependencies which can be replaced by about the same amount of
	  non-gnome code.  Also replace all BEGIN/END_GNOME_DECLS with the
	  standard extern "C" foo.

	* libgnomevfs/gnome-vfs-private.h:  Add NLS defines N_ and _ because
	  those are handled by gnome normally.  Also this uses the "private"
	  defines from gnome-i18nP.h which is apparently the way to do this
	  inside the library.

2000-08-09  Robin * Slomkowski  <rslomkow@eazel.com>
